--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -1060,6 +1060,10 @@ h1, h2, h3, h4
   color: red
   text-transform: uppercase
 
+.add-section
+  margin-top: 10px
+  margin-bottom: 10px
+
 
 // BELOW ARE RESPONSIVE STYLES //
 
