--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -1064,6 +1064,8 @@ h1, h2, h3, h4
   margin-top: 10px
   margin-bottom: 10px
 
+.add-item
+  margin-top: -5px
 
 // BELOW ARE RESPONSIVE STYLES //
 
