--- a/app/views/activities/_main_activity_content.html.haml
+++ b/app/views/activities/_main_activity_content.html.haml
@@ -11,7 +11,7 @@
             .activity-description-overlay(ng-hide="activity.description.length < 455")
           .text-center(ng-hide="false || editMode || (activity.description.length < 455)")
             = link_to 'more', 'javascript:void(0);', id: 'activity-description-maximize'
-        %button.btn.btn-large.add-section(ng-show="editMode && (!activity.description)")
+        %button.btn.btn-small.add-section(ng-show="editMode && (!activity.description)")
           Add Description
       %csEditPairEdit
         = text_area_tag :description, "", {rows: "15", data: {:'ng-model' => "activity.description"}, autofocus: 'autofocus'}
@@ -21,34 +21,53 @@
         .activity-ingredients-list#full-ingredients-list.section{data: {target: ''}}
           .well
             = render 'ingredients_list', ingredients: activity.ingredients
+
       .section
         %csEditPair
           %csEditPairShow
             %div(ng-show="!!activity.yield")
               %h4 Yield
               %span(itemprop="recipeYield" ng-bind="activity.yield")
-            %button.btn.btn-large.add-section(ng-show="editMode && (!activity.yield)")
+            %button.btn.btn-small.add-section(ng-show="editMode && (!activity.yield)")
               Add Yield
 
           %csEditPairEdit
-            %h5 Yield
+            %h4 Yield
             = text_field_tag :yield, "", {data: {:'ng-model' => "activity.yield"}}
 
-    - if activity.timing.present?
       .section
-        %h4 Timing
-        = activity.timing
-    %h4 Equipment and Materials
+        %csEditPair
+          %csEditPairShow
+            %div(ng-show="!!activity.timing")
+              %h4 Timing
+              %span(ng-bind="activity.timing")
+            %button.btn.btn-small.add-section(ng-show="editMode && (!activity.timing)")
+              Add Timing
+
+          %csEditPairEdit
+            %h4 Timing
+            = text_field_tag :timing, "", {data: {:'ng-model' => "activity.timing"}}
+
     .section
+      %h4(ng-show="hasRequiredEquipment()") Equipment and Materials
       %ul.equipment
         %li(ng-repeat="item in activity.equipment | filter:requiredEquipment")
           %csEquipmentEditPair
+      %button.btn.btn-small.add-section(ng-show="editMode && ! hasRequiredEquipment()" ng-click="addEquipment(false)")
+        Add Required Equipment
+      %button.btn.btn-small.add-item(ng-show="editMode && hasRequiredEquipment()" ng-click="addEquipment(false)")
+        +
 
-    %h4 Optional Equipment and Materials
     .section
+      %h4(ng-show="hasOptionalEquipment()") Optional Equipment and Materials
       %ul.equipment
         %li(ng-repeat="item in activity.equipment | filter:optionalEquipment")
           %csEquipmentEditPair
+      %button.btn.btn-small.add-section(ng-show="editMode && ! hasOptionalEquipment()" ng-click="addEquipment(true)")
+        Add Optional Equipment
+      %button.btn.btn-small.add-item(ng-show="editMode && hasOptionalEquipment()" ng-click="addEquipment(true)")
+        +
+
     - if activity.used_in_activities.published.any?
       .section(ng-hide="editMode")
         %h4 Used In
