[homepage] AB test two designs

--- a/app/views/home/_index_A.html.haml
+++ b/app/views/home/_index_A.html.haml
@@ -1,7 +1,4 @@
-- content_for :title, ""
-- content_for :description, "Free online cooking school from key members of the Modernist Cuisine team. Our first course will teach you everything you need to know about sous vide cooking."
-
-.container#main-container
+.container
   #hero-container
     .row
       .span12
