--- a/app/views/home/_madlib.html.haml
+++ b/app/views/home/_madlib.html.haml
@@ -16,5 +16,5 @@
                   = email_field_tag 'email', nil, {placeholder: 'email', required: true}
                 &#46;&nbsp;&nbsp;
               %p
-                I want to learn how to be a kick-ass cook.
+                I want to learn how to be a better cook.
             = submit_tag 'Sign Up Now', class: 'btn btn-primary btn-large', id: 'subscribe-email'
