--- a/app/views/home/_index_B.html.haml
+++ b/app/views/home/_index_B.html.haml
@@ -71,7 +71,7 @@
         %p.lead
           Yes, ChefSteps is entirely free-to-learn. Our goal is to collaborate with the global community of curious cooks to create original recipes, invent new techniques, and help us all become better cooks. Skeptical? Read more here about how we plan to keep ChefSteps going without compromise.
       .span5.offset1
-        %p We'll keep you up to date with the latest from ChefSteps.  We don't like spam, and we don't do shady stuff with your info.
+        %p.lead Keep up to date with the latest from ChefSteps.
         = form_tag sign_up_url, :method => :get, class: 'form-inline' do
           %p= email_field_tag 'email', nil, {class: 'input-signup-email', placeholder: 'Email Address', required: true}
           %p= submit_tag 'Subscribe Now', class: 'btn btn-primary btn-large', id: 'subscribe-email'
