[homepage] update copy

--- a/app/views/home/_index_B.html.haml
+++ b/app/views/home/_index_B.html.haml
@@ -69,7 +69,8 @@
     .row.section
       .span6
         %p.lead
-          Yes, ChefSteps is entirely free-to-learn. Our goal is to collaborate with the global community of curious cooks to create original recipes, invent new techniques, and help us all become better cooks. Skeptical? Read more here about how we plan to keep ChefSteps going without compromise.
+          Yes, ChefSteps is entirely free-to-learn. Our goal is to collaborate with the global community of curious cooks to create original recipes, invent new techniques, and help us all become better cooks. 
+          / Skeptical? Read more here about how we plan to keep ChefSteps going without compromise.
       .span5.offset1
         %p.lead Keep up to date with the latest from ChefSteps.
         = form_tag sign_up_url, :method => :get, class: 'form-inline' do
