--- a/app/views/activities/_hero_visual.html.haml
+++ b/app/views/activities/_hero_visual.html.haml
@@ -3,7 +3,7 @@
     %div(ng-show="showHeroVideo() || showHeroImage()")
       %iframe.noprint(ng-show="showHeroVideo()" ng-src="{{heroVideoURL()}}" ng-style="setHeight()" csenforceaspect)
       %img(ng-show="(! showHeroVideo()) && showHeroImage()" ng-src="{{heroImageURL(570)}}" alt="{{activity.title}}" title="{{activity.title}}" itemprop="image")
-    %button.btn.btn-large.add-section(ng-show="editMode && (! (showHeroVideo() || showHeroImage()))")
+    %button.btn.btn-small.add-section(ng-show="editMode && (! (showHeroVideo() || showHeroImage()))")
       Add Hero Video or Image
 
   %csEditPairEdit
