[about] updated general about page

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -553,6 +553,7 @@ h1, h2, h3, h4
   border-radius: 10px
   border: 1px solid $orange
   @include boxsizing
+  cursor: pointer
 .indicator-active
   border: 2px solid $dark_orange
   background: white
@@ -1306,3 +1307,9 @@ h1, h2, h3, h4
 
   .top-container
     margin-top: 0px
+
+
+
+/* New About Page 08-May-2013 */
+
+
