--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -23,7 +23,7 @@
   :javascript
     paramScaling = #{params[:scaling]};
 
-#activity-body.recipe_schema(ng-cloak="" cseditrecord=""){:itemscope => true, :itemtype => (@activity.is_recipe? ? "http://schema.org/Recipe" : nil), data: {:'activity-id' => @activity.id}}
+#activity-body.recipe_schema(ng-cloak=""){:itemscope => true, :itemtype => (@activity.is_recipe? ? "http://schema.org/Recipe" : nil), data: {:'activity-id' => @activity.id}}
 
   .row.printable
 
