--- a/app/views/devise/registrations/welcome.html.haml
+++ b/app/views/devise/registrations/welcome.html.haml
@@ -1,5 +1,7 @@
 .container.top-container
   .row
-    .span12.well
+    .span12.well.section
       %h1.text-orange Welcome to ChefSteps!
       %h2 Please check your email your email to confirm your registration.
+      - if params[:email]
+        = link_to_web_email(params[:email])
