--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -104,7 +104,7 @@
               .row
                 .span5.offset1
                   %h3 Join the Community
-                  = form_tag sign_up_url, :method => :get do
+                  = form_tag welcome_url, :method => :get do
                     = email_field_tag 'email', nil, {class: 'input-signup-email', placeholder: 'Enter email', required: true}
                     = hidden_field_tag :signed_up_from, 'bottom_popup_cta'
                     = submit_tag 'Sign Up Now', class: 'btn btn-secondary', id: 'subscribe-email'
