--- a/app/views/home/_index_B.html.haml
+++ b/app/views/home/_index_B.html.haml
@@ -102,7 +102,7 @@
         .span4.signup-box
           .well
             %h3 Join the community!
-            = form_tag sign_up_url, :method => :get, class: 'form-inline' do
+            = form_tag welcome_url, :method => :get, class: 'form-inline' do
               = hidden_field_tag :signed_up_from, 'homepage_cta'
               %p= email_field_tag 'email', nil, {class: 'input-signup-email', placeholder: 'Enter email', required: true}
               %p= submit_tag 'Sign Up Now', class: 'btn btn-primary btn-large btn-block', id: 'subscribe-email'
