--- a/app/views/devise/registrations/welcome.html.haml
+++ b/app/views/devise/registrations/welcome.html.haml
@@ -2,6 +2,6 @@
   .row
     .span12.well.section
       %h1.text-orange Thanks for Signing Up!
-      %h2 Please check your email to confirm your registration.
+      %h2 Please check your email now to confirm your registration.
       - if params[:email]
         = link_to_web_email(params[:email])
