--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,39 +1,57 @@
 .container#main-container
-  .row
-    .span8.offset2.well
-      %h3 Please fill out the following to complete your registration:
-      %hr
-      .registration.standard
-        = form_for @user, url: registration_path(@user), html: {class: 'form-horizontal'} do |f|
-          = render 'shared/error_messages', target: f
-          = f.hidden_field :signed_up_from
-          .control-group
-            .control-label= f.label :name
-            .controls= f.text_field :name
+  .row.section
+    .span5.offset1.section
+      .lead
+        %h3 Awesome! Thanks for confirming.
+        %p If you like, you can create a profile to:
+        %ul
+          %li Participate in the forums
+          %li Get your questions answered about cooking answered
+    .span3.offset1.section.registration
+      = form_for @user, url: registration_path(@user) do |f|
+        = render 'shared/error_messages', target: f
+        = f.hidden_field :signed_up_from
+        = f.text_field :name, placeholder: 'Name'
+        = f.text_field :email, placeholder: 'Email'
+        = f.password_field :password, placeholder: 'Password'
+        = f.password_field :password_confirmation, placeholder: 'Confirmation'
+        = f.submit 'Sign up', class: 'btn btn-primary btn-large btn-block'
+        .section
+          = label_tag :terms_registration do
+            .hide
+              = check_box_tag :terms_registration, true, true, required: true
+            = "By tapping Sign up above, you are agreeing to the <b>#{link_to "Terms of Service", terms_of_service_path}</b>.".html_safe
+      / .registration.standard
+      /   = form_for @user, url: registration_path(@user), html: {class: 'form-horizontal'} do |f|
+      /     = render 'shared/error_messages', target: f
+      /     = f.hidden_field :signed_up_from
+      /     .control-group
+      /       .control-label= f.label :name
+      /       .controls= f.text_field :name
 
-          .control-group
-            .control-label= f.label :email
-            .controls= f.text_field :email
+      /     .control-group
+      /       .control-label= f.label :email
+      /       .controls= f.text_field :email
 
-          .control-group
-            .control-label= f.label :password
-            .controls= f.password_field :password
+      /     .control-group
+      /       .control-label= f.label :password
+      /       .controls= f.password_field :password
 
-          .control-group
-            .control-label= f.label :password_confirmation, 'Confirmation'
-            .controls= f.password_field :password_confirmation
+      /     .control-group
+      /       .control-label= f.label :password_confirmation, 'Confirmation'
+      /       .controls= f.password_field :password_confirmation
 
-          .control-group
-            .controls.controls-small
-              = f.submit 'Sign up', class: 'btn btn-primary btn-large'
+      /     .control-group
+      /       .controls.controls-small
+      /         = f.submit 'Sign up', class: 'btn btn-primary btn-large'
 
-          .control-group
-            .controls.controls-small
-              = label_tag :terms_registration do
-                .hide
-                  = check_box_tag :terms_registration, true, true, required: true
-                = "By tapping Sign up above, you are agreeing to the <b>#{link_to "Terms of Service", terms_of_service_path, class: 'black-link'}</b>.".html_safe
+      /     .control-group
+      /       .controls.controls-small
+      /         = label_tag :terms_registration do
+      /           .hide
+      /             = check_box_tag :terms_registration, true, true, required: true
+      /           = "By tapping Sign up above, you are agreeing to the <b>#{link_to "Terms of Service", terms_of_service_path, class: 'black-link'}</b>.".html_safe
 
-        / %hr
-        / .registration.facebook
-        /   = render 'devise/shared/facebook_login', text: 'Sign up with <b>Facebook</b>'
+      / %hr
+      / .registration.facebook
+      /   = render 'devise/shared/facebook_login', text: 'Sign up with <b>Facebook</b>'
