[homepage] fix typo

--- a/app/views/home/_index_B.html.haml
+++ b/app/views/home/_index_B.html.haml
@@ -65,7 +65,7 @@
   .container
     .row.section
       .span12
-        %h2.text-orange Did we mention its free?
+        %h2.text-orange Did we mention it's free?
     .row.section
       .span6
         %p.lead
