--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -709,6 +709,16 @@ h1, h2, h3, h4
     background: gray
     @include transition(all 100ms)
 
+.btn-basic
+  background: $offwhite
+  border: 0px
+  border-radius: 0px
+  @include boxsizing
+  @include transition(all 100ms)
+  &:hover
+    background: $darker_orange
+    @include transition(all 100ms)
+
 .btn-play-image
   position: relative
   background: image-url('play-button.png') no-repeat
@@ -1028,17 +1038,6 @@ h1, h2, h3, h4
   z-index: 999
   background-color: rgba(158, 202, 237, 0.2)
 
-// Not ready for prime time
-.remove-target
-  display: none
-  border: 2px solid red
-  width: 10%
-  height:  10%
-  position:  absolute
-  top: 5%
-  left:  5%
-  font-size: 15px
-
 #activity-body
   form, textarea
     width: 100%
@@ -1055,6 +1054,13 @@ input.equipment-typeahead
   margin-left: -2px
   margin-top: 0px
   margin-bottom: 0px
+  width: 100%
+  max-width: 280px
+
+csequipmenteditpair
+  .remove-button
+    display: inline-block
+    margin-left: -20px
 
 
 // Making this match h1. I tried @including h1 but that was a no go.
@@ -1085,7 +1091,7 @@ input.equipment-typeahead
   margin-top: 10px
   margin-bottom: 10px
 
-.add-item
+.add-item, .done
   margin-top: -5px
 
 // BELOW ARE RESPONSIVE STYLES //
