moving works pretty well

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -1068,8 +1068,11 @@ csequipmenteditpair
     z-index: 2000
     margin-left: -40px
     position: absolute
-    left: 19px
-    top: 3px
+    left: 18px
+    top: 4px
+
+.no-bullet
+  list-style-type: none
 
 
 // Making this match h1. I tried @including h1 but that was a no go.
