--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -337,6 +337,7 @@ h1, h2, h3, h4
     width: 100%
     float: left
     padding: 0px
+    margin-bottom: 1em
     @include boxsizing
     .step-element
       float: left
