--- a/app/views/activities/course_activity.html.haml
+++ b/app/views/activities/course_activity.html.haml
@@ -1,7 +1,7 @@
 .container
   .row
     .span12.section
-      %h2= @course.title
+      %h2= link_to @course.title, @course
   .row
     .span12.course-nav-top
       - if @prev_module
