--- a/app/views/courses/spherification.html.haml
+++ b/app/views/courses/spherification.html.haml
@@ -14,7 +14,7 @@
       
     .span6.well
       - if current_user && current_user.course_ids.include?(@course.id)
-        = where_user_left_off_in_course(@course, current_user)
+        = where_user_left_off_in_course(@course, current_user, 'btn btn-primary btn-large')
       - else
         = form_tag enroll_course_path(@course) do
           = submit_tag 'Enroll', class: 'btn btn-primary btn-large pull-right'
