--- a/app/views/events/upload/_create.html.haml
+++ b/app/views/events/upload/_create.html.haml
@@ -2,8 +2,8 @@
   = image_tag filepicker_gallery_image(event.trackable.image_id)
 - if event.trackable.activity
   %div
-    = "you uploaded a photo for #{link_to event.trackable.activity.title, event.trackable.activity}".html_safe
+    = "You uploaded a photo for #{link_to event.trackable.activity.title, event.trackable.activity}.".html_safe
 - else
   %div
-    = "you uploaded a photo for #{event.trackable.recipe_name}".html_safe
+    = "You uploaded a photo for #{event.trackable.recipe_name}.".html_safe
 %div= time_ago_in_words(event.created_at) + ' ago'
