--- a/app/views/user_profiles/edit.html.haml
+++ b/app/views/user_profiles/edit.html.haml
@@ -1,17 +1,26 @@
 .container
   .row
-    .span12
+    .span6
       %h2 Edit Profile
       = form_for @user, url: user_profile_path(@user), method: :put do |f|
+        .upload-wrapper
+          = image_tag '/assets/missing.png', class: "upload-photo-preview"
+          = link_to '+', '#', class: 'upload-photo-btn'
+          %p= f.hidden_field :image_id, class: 'input-block-level upload-photo-field', required: true
         %div
           = f.label :name
-          = f.text_field :name
+          = f.text_field :name, class: 'input-block-level'
         %div
           = f.label :email
-          = f.text_field :email
+          = f.text_field :email, class: 'input-block-level'
         %div
           = f.label :website
-          = f.text_field :website
+          = f.text_field :website, class: 'input-block-level'
+        %div
+          = f.label :bio
+          = f.text_area :bio, class: 'input-block-level'
         %div
           = f.submit 'Save Changes', class: 'btn btn-primary'
           = link_to 'Cancel', user_profile_path(@user), class: 'btn btn-primary'
+
+= render 'layouts/filepicker'
