[registration] fixed typo

--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -9,7 +9,7 @@
           %h3 Join the Community!
         %ul
           %li Participate in the forums
-          %li Get your questions answered about cooking answered
+          %li Get your questions about cooking answered
     .span5.section.registration
       = form_for @user, url: registration_path(@user) do |f|
         = render 'shared/error_messages', target: f
