[madlib] update mobile styling

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -1139,6 +1139,13 @@ h1, h2, h3, h4
     &:hover
       color: #fff
 
+  .top-container
+    margin-top: 0px
+
+  .container-fluid
+    margin-left: -20px
+    margin-right: -20px
+
 /* Landscape phone to portrait tablet */
 @media (max-width: 767px)
   #hero-container
@@ -1202,6 +1209,13 @@ h1, h2, h3, h4
     color: #333
     &:hover
       color: #fff
+
+  .top-container
+    margin-top: 0px
+
+  .container-fluid
+    margin-left: -20px
+    margin-right: -20px
  
 /* Landscape phones and down */
 @media (max-width: 480px)
@@ -1236,3 +1250,12 @@ h1, h2, h3, h4
     font-weight: normal
     &:hover
       color: #fff
+
+  .madlib, .madlib input
+    font-size: 20px
+    input[type='text'], input[type='email']
+      width: 80%
+      font-size: 20px
+
+  .top-container
+    margin-top: 0px
