--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -307,6 +307,7 @@ h1, h2, h3, h4
         cursor: pointer
 
 .activity-description-wrapper
+  margin-top: 10px
   position: relative
   .activity-description
     overflow: hidden
