--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -301,6 +301,19 @@ h1, h2, h3, h4
       &:hover
         cursor: pointer
 
+// temporary until steps are moved over to csenforceaspect
+.ordered-step-item
+  .video-container
+    padding-bottom: 56.25%
+    height: 0
+    iframe, object, embed
+      position: absolute
+      top: 0
+      left: 0
+      height: 100%
+      width: 100%
+
+
 .activity-description-wrapper
   margin-top: 10px
   position: relative
