--- a/app/views/activities/_ingredients_list.html.haml
+++ b/app/views/activities/_ingredients_list.html.haml
@@ -9,6 +9,26 @@
           %i.icon-question-sign
 
   %tbody
-
-    - ingredients.each do |ingredient|
-      = render 'ingredient_row', ingredient: ingredient
+    %tr.ingredient-item(ng-repeat="item in activity.equipment | filter:requiredEquipment" ng-class="equipmentBulletStyle()"){data: {:'ingredient-id' => ingredient.ingredient.id}}
+      %td.ingredient-title
+      .pull-left
+        - if ingredient.product_url?
+          =link_to ingredient.title.html_safe, ingredient.product_url, { class: ('for-sale-after' if ingredient.for_sale), target: "_blank"}
+        - elsif ingredient.sub_activity_id != nil
+          -subact = Activity.find_by_id(ingredient.sub_activity_id)
+          =link_to subact.title.html_safe, activity_path(subact), { target: "_blank", onclick: "addScalingToLink(this);"}
+        - else
+          / - if ingredient.note?
+          /   = "#{ingredient.title.html_safe}, #{apply_shortcodes(ingredient.note).html_safe}"
+          / - else
+          = ingredient.title.html_safe
+      - if ingredient.note?
+        .pull-left
+          = ", #{apply_shortcodes(ingredient.note).html_safe}"
+      %td
+        .prependable
+      %td.quantity-group.qtyfade
+        .lbs-qty
+        .lbs-label
+        .main-qty= ingredient.display_quantity
+      %td.unit.qtyfade= ingredient.unit
